<resources>
    <string name="app_name">CaptureRise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>


    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
    </string-array>

</resources>