<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/bottom_sheet_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/bottom_sheet_padding"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Chevron indicating that the bottom sheet is expandable -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_open_object_detection_settings"
                android:contentDescription="@string/alt_bottom_sheet_chevron" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:text="Capture a"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_toBeCaptured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint=""
                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
                android:textColor="@color/black"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/refresh"
                android:layout_width="@dimen/bottom_sheet_control_btn_size"
                android:layout_height="@dimen/bottom_sheet_control_btn_size"
                android:contentDescription="Another image"
                android:src="@drawable/ic_refresh" />

            </LinearLayout>

        </RelativeLayout>


        <!-- ML confidence threshold adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:text="0.50"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus"  />
            </LinearLayout>
        </RelativeLayout>

        <!-- ML max results adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_max_results"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/max_results_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_minus"
                    android:src="@drawable/ic_minus" />
                <TextView
                    android:id="@+id/max_results_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:text="3"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/max_results_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>